# Brainet

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  brainet.h  brainet.hpp  dependencies.h  dependencies.hpp  example.cpp  graph.h  graph.hpp  layer.h  lineare_algebra.h  main.cpp  model.h  model.hpp  tensor.h  tensor.hpp  test  test.cpp  variable.h  variable.hpp
builders/: builder.h  dense_builder.h  dense_layer_builder.h  layer.h  layer_builder.h
cluster/: cluster.h  cost.h  dense.h  input.h
datatypes/: matrix.hpp  tensor.hpp  vector.hpp
datatypes/random/: normal_distribution.hpp  random.hpp  uniform_distribution.hpp
deep_feedforward_networks/: activation_functions.h  cost_functions.h  perceptron.h
depreceated/: variable.hpp
depreceated/datatypes/: vector.hpp
include/: Config.hpp  Node.h  Operation.h  Tensor.h  brainet.hpp  config.h  config.hpp  dependencies.h  dependencies.hpp  graph.hpp  logger.hpp  model.hpp  reader.hpp  variable.hpp
include/datatypes/: matrix.hpp  tensor.hpp  vector.hpp
include/module/: dataset.hpp  dense.hpp  layer.hpp  loss.hpp  module.hpp  module_variant.hpp
include/operation/: matmul.cuh  matmul.hpp  operation.hpp
include/operation/activation_function/: activation_function.hpp  activation_function_variant.hpp  heavyside_step.hpp  hyperbolic_tangent.hpp  linear.hpp  parametric_relu.hpp  rectified_linear_unit.hpp  sigmoid.hpp  softmax.hpp
include/operation/loss_functions/: error_rate.hpp  loss_function.hpp  loss_variant.hpp
include/operation/parameter_norm_penalties/: L1_Norm.hpp  L2_Norm.hpp  norm_variant.hpp  parameter_norm_penalty.hpp
include/operation/processing/: average.hpp  dropout.hpp  one_hot.hpp  padding.hpp
include/operation/surrogate_loss_functions/: cross_entropy.hpp  mean_absolute_error.hpp  mse.hpp  surrogate_loss_function.hpp
include/operation/weight_initialization/: he_initialization.hpp  normal_distribution_initializer.hpp  normalized_initialization.hpp  uniform_distribution_initializer.hpp  weight_initializer.hpp  weight_matrix_initializer.hpp
include/optimizer/: adagrad.hpp  adam.hpp  momentum_sgd.hpp  nesterov_momentum.hpp  optimizer.hpp  optimizer_variant.hpp  rmsprop.hpp  rmsprop_nesterov.hpp  sgd.hpp
include/preprocessing/: image_transformation.hpp  preprocessing.hpp
include/primitives/: DataTypes.h  Tensor.h  enum.h
json_interface/: data.json  json  json_brainet_bridge.hpp  json_graph.hpp  json_parser.hpp  run.cpp  run_json.cpp  task.json  test.json
layer/: layer.h  operation.h  variable.h
layer/dense_layer/: activation_function.h  dense_layer.h  heavyside_step.h  linear_unit.h  rectified_linear_unit.h
model/: ensemble.hpp  model.hpp  sequential.hpp
module/: cost.h  cost.hpp  dataset.hpp  dense.h  dense.hpp  ensemble_module.hpp  fullyconnected.hpp  input.h  input.hpp  layer.hpp  loss.hpp  module.h  module.hpp  norm.h  output.hpp  performance.hpp
module/fullyconnected/: dense.hpp  fullyconnected.hpp  output.hpp
operation/: matmul.hpp  operation.h  operation.hpp  void_operation.h
operation/activation_function/: activation_function.h  activation_function.hpp  heavyside_step.h  heavyside_step.hpp  hyperbolic_tangent.h  hyperbolic_tangent.hpp  linear.h  linear.hpp  linear_unit.h  logistic_sigmoid.h  parametric_relu.hpp  rectified_linear_unit.h  rectified_linear_unit.hpp  sigmoid.h  sigmoid.hpp  softmax.h  softmax.hpp
operation/cost_function/: cost_function.h  cost_function.hpp  cross_entropy.hpp  mse.h  mse.hpp  negative_log_likelyhood.hpp
operation/linear_algebra/: README  data_types.h  matmul.h  matmul.hpp  matrix.hpp  matrix_multiply.h  tensor.hpp
operation/loss_functions/: error_rate.hpp  loss_function.hpp
operation/norm/: L1.h  L1.hpp  L2.h  L2.hpp  norm.h  norm.hpp
operation/parameter_norm_penalties/: L1_Norm.hpp  L2_Norm.hpp  parameter_norm_penalty.hpp
operation/performance/: error_rate.hpp  performance.hpp  performance_function.hpp
operation/processing/: average.hpp  dropout.hpp  noise.h  noise.hpp  one_hot.h  one_hot.hpp  padding.h  padding.hpp
operation/surrogate_loss_functions/: cross_entropy.hpp  mean_absolute_error.hpp  mse.hpp  surrogate_loss_function.hpp
operation/weight_initialization/: he_initialization.hpp  normalized_initialization.hpp  uniform_distribution_initializer.hpp  weight_initializer.hpp  weight_matrix_initializer.hpp
optimizer/: nesterov_momentum.hpp  sgd.hpp
optimizers/: AdaGrad.hpp  Adam.hpp  Optimizer.hpp  RMSProp.hpp  RMSProp_Nesterov.hpp  SGD.hpp  momentum_SGD.hpp  nesterov_momentum.hpp  primitive_SGD.hpp
preprocessing/: batch.hpp  image_transformation.h  image_transformation.hpp  normalize.hpp  split.hpp
random/: he_initialization.hpp  normal_distribution.hpp  normalized_initialization.hpp  random.hpp  uniform_distribution.hpp
readers/: bin_reader.hpp  idx_reader.h  idx_reader.hpp
src/: Node.cpp  Operation.cpp  Tensor.cpp  graph.cpp  logger.cpp  model.cpp  reader.cpp  variable.cpp
src/datatypes/: matrix.cpp  tensor.cpp  vector.cpp
src/module/: dataset.cpp  dense.cpp  layer.cpp  loss.cpp  module.cpp
src/operation/: matmul.cpp  matmul.cu  operation.cpp
src/operation/activation_function/: activation_function.cpp  heavyside_step.cpp  hyperbolic_tangent.cpp  linear.cpp  parametric_relu.cpp  rectified_linear_unit.cpp  sigmoid.cpp  softmax.cpp
src/operation/loss_functions/: error_rate.cpp  loss_function.cpp
src/operation/parameter_norm_penalties/: L1_Norm.cpp  L2_Norm.cpp  parameter_norm_penalty.cpp
src/operation/processing/: average.cpp  dropout.cpp  one_hot.cpp  padding.cpp
src/optimizer/: adagrad.cpp  adam.cpp  momentum_sgd.cpp  nesterov_momentum.cpp  rmsprop.cpp  rmsprop_nesterov.cpp  sgd.cpp
src/preprocessing/: image_transformation.cpp  preprocessing.cpp
tests/: example.cpp
to_be_removed/: abstract_variable.h  layer_builder.h  lineare_algebra.h  model.h  perceptron.h  testmatmul.cpp
weight_initialization/: he_initialization.hpp  normal_distribution_initializer.hpp  normalized_initialization.hpp  uniform_distribution_initializer.hpp  weight_initializer.hpp
(+9 files in other folders)
